--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@grammyjs/commands": "^1.2.0",
     "@grammyjs/menu": "^1.3.1",
     "@types/node": "^25.0.3",
     "discord.js": "^14.25.1",
