--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@grammyjs/commands": "^1.2.0",
     "@grammyjs/menu": "^1.3.1",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "discord.js": "^14.25.1",
+    "express": "^5.2.1",
     "grammy": "^1.38.4"
   }
 }
